# stuffit-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: integration.rs  integration_legacy.rs
